tests/fixtures/invalid/min_none_str.py
# Cannot call min() with None, Str
x = min(None, "hello")
